# bible-web-framework

./: .gitignore  Cargo.toml  DEPLOY.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.jsonc
.github/: dependabot.yml
.github/workflows/: lint.yml
.turbo/daemon/: f7e06b21bb244c77-turbo.log.2025-08-02
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  book_abbreviations.json  book_aliases.json  book_verse_counts.json  books.json  build.rs  fly.toml  package.json
backend/.sqlx/: query-1dc09d0f1cb88b279dfdc54c9ead1691dfadd3a3ab4683291779dccde2fe784d.json  query-8f3031a396ea8250e785c1d5df39d1427a5951040c98f74c959bdc3fcd96b7fe.json  query-911306e1b1a530c59967f19300ee03ecac099b476ced150f9694a9a56d6a3f0b.json  query-dbc05bfe2641c24d267f0f1025058d19ad13ff4ba1da5b5007f6562951746db8.json  query-e5ad074ad32c4386ab0dd5fc61f6f1f83d574ac428a7c388edc90d0185687a4f.json  query-f59f9155e5eb13a25cabd110b8328054a7a219c84dfe0e30f302dbdd01c7fc83.json
backend/bibles/eanv/: 02-GENeng-eanv.usfm  08-JDGeng-eanv.usfm  15-2CHeng-eanv.usfm  20-PSAeng-eanv.usfm  21-PROeng-eanv.usfm  25-JEReng-eanv.usfm  26-LAMeng-eanv.usfm  32-OBAeng-eanv.usfm  34-MICeng-eanv.usfm  37-ZEPeng-eanv.usfm  39-ZECeng-eanv.usfm  72-LUKeng-eanv.usfm  73-JHNeng-eanv.usfm  75-ROMeng-eanv.usfm  76-1COeng-eanv.usfm  78-GALeng-eanv.usfm  79-EPHeng-eanv.usfm  81-COLeng-eanv.usfm  85-2TIeng-eanv.usfm  88-HEBeng-eanv.usfm  90-1PEeng-eanv.usfm  93-2JNeng-eanv.usfm  95-JUDeng-eanv.usfm  bible.toml  usfm-usj.py
backend/deploy/: bwf-deploy.db
backend/kjv/: 01-GENeng-kjv2006.usfj
backend/migrations/: 20251215212752_short-urls.sql
backend/src/: api.rs  bake.rs  bible_data.rs  book_category.rs  book_data.rs  books.json  config.rs  config_new.rs  index.rs  main.rs  reference.rs  reference_encoding.rs  search.rs  str_utils.rs  usfj.rs  usfm_loader.rs  usj.rs  utils.rs  verse_range.rs
backend/src/api/: book.rs  general.rs  info.rs  mod.rs  search.rs  short_url.rs
backend/src/bible_data/: baked.rs  config.rs  expanded.rs  index.rs  mod.rs
backend/src/usfm_converter/: mod.rs  query.rs  usfm_parser.rs  usj_generator.rs
backend/src/usj/: content.rs  identifier.rs  loader.rs  marker.rs  mod.rs  root.rs
backend/src/utils/: mod.rs  normalize.rs  ordered_enum.rs  parsed_string_value.rs  prefix_tree.rs  serde_as.rs
backend/usfm/: 05-NUMeng-eanv.usfm  09-RUTeng-eanv.usfm  16-EZReng-eanv.usfm  27-EZKeng-eanv.usfm  38-HAGeng-eanv.usfm  84-1TIeng-eanv.usfm  86-TITeng-eanv.usfm  87-PHMeng-eanv.usfm  94-3JNeng-eanv.usfm  example.cmd  usfm-usfj.py  usfm-usj.py
backend/usfm-usfj/: 02-GENeng-eanv.usfj  03-EXOeng-eanv.usfm  04-LEVeng-eanv.usfm  06-DEUeng-eanv.usfm  07-JOSeng-eanv.usfm  09-RUTeng-eanv.usfj  10-1SAeng-eanv.usfj  10-1SAeng-eanv.usfm  106-GLOeng-eanv.usfm  11-2SAeng-eanv.usfj  11-2SAeng-eanv.usfm  12-1KIeng-eanv.usfj  12-1KIeng-eanv.usfm  13-2KIeng-eanv.usfj  13-2KIeng-eanv.usfm  14-1CHeng-eanv.usfj  14-1CHeng-eanv.usfm  16-EZReng-eanv.usfj  17-NEHeng-eanv.usfm  18-ESTeng-eanv.usfj  18-ESTeng-eanv.usfm  19-JOBeng-eanv.usfm  22-ECCeng-eanv.usfj  22-ECCeng-eanv.usfm  23-SNGeng-eanv.usfj  23-SNGeng-eanv.usfm  24-ISAeng-eanv.usfm  25-JEReng-eanv.usfj  26-LAMeng-eanv.usfj  28-DANeng-eanv.usfj  28-DANeng-eanv.usfm  29-HOSeng-eanv.usfm  30-JOLeng-eanv.usfj  30-JOLeng-eanv.usfm  31-AMOeng-eanv.usfj  31-AMOeng-eanv.usfm  33-JONeng-eanv.usfm  35-NAMeng-eanv.usfm  36-HABeng-eanv.usfm  38-HAGeng-eanv.usfj  (+34 more)
backend/usj/: 02-GENeng-eanv.usj  03-EXOeng-eanv.usj  04-LEVeng-eanv.usj  05-NUMeng-eanv.usj  06-DEUeng-eanv.usj  07-JOSeng-eanv.usj  08-JDGeng-eanv.usj  09-RUTeng-eanv.usj  10-1SAeng-eanv.usj  11-2SAeng-eanv.usj  12-1KIeng-eanv.usj  13-2KIeng-eanv.usj  14-1CHeng-eanv.usj  15-2CHeng-eanv.usj  16-EZReng-eanv.usj  17-NEHeng-eanv.usj  18-ESTeng-eanv.usj  19-JOBeng-eanv.usj  20-PSAeng-eanv.usj  21-PROeng-eanv.usj  22-ECCeng-eanv.usj  23-SNGeng-eanv.usj  24-ISAeng-eanv.usj  25-JEReng-eanv.usj  26-LAMeng-eanv.usj  27-EZKeng-eanv.usj  28-DANeng-eanv.usj  29-HOSeng-eanv.usj  30-JOLeng-eanv.usj  31-AMOeng-eanv.usj  32-OBAeng-eanv.usj  33-JONeng-eanv.usj  34-MICeng-eanv.usj  35-NAMeng-eanv.usj  36-HABeng-eanv.usj  37-ZEPeng-eanv.usj  38-HAGeng-eanv.usj  39-ZECeng-eanv.usj  40-MALeng-eanv.usj  70-MATeng-eanv.usj  (+26 more)
bible-framework/: package-lock.json  package.json
frontend/: .env.example  .prettierignore  README.md  eslint.config.mjs  generateBooks.ts  generateTextDir.ts  generate_books.ts  nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue  books_data.ts  bwfApi.ts  usj.ts  utils.ts
frontend/app/assets/: bwf.css  usj.css
frontend/app/components/: UsjContentsRenderer.vue
frontend/app/data/: books.ts  textDir.ts
frontend/app/pages/: index.vue
frontend/app/pages/search/: index.vue
frontend/i18n/locales/: en-US.json  en.json  ja.json  ur.json
frontend/src/: App.vue
src/: main.rs
