[package]
name = "bible-web-framework-backend"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "bwf-backend"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15.7"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] } # TODO: Remove version lock when https://github.com/tokio-rs/tracing/issues/3369 is fixed
tokio = "1.49.0"
actix-web = "4.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
phf = { version = "0.13.1", features = ["unicase", "macros"] }
unicode-normalization = "0.1.25"
rayon = "1.11.0"
unicase = "2.9.0"
ere = "0.2.4"
bimap = "0.6.3"
notify-debouncer-full = "0.7.0"
tree-sitter = "0.26.5"
tree-sitter-usfm3 = "3.0.0-alpha.1"
subslice-offset = "0.1.1" # TODO: Remove when https://github.com/rust-lang/rust/issues/126769 becomes stable (probably Rust 1.93.0)
miette = { version = "7.6.0", features = ["fancy"] }
itertools = "0.14.0"
monostate = "1.0.2"
smallvec = "1.15.1"
charabia = "0.9.9"
either = "1.15.0"
string-interner = "0.19.0"
serde-tuple-vec-map = "1.0.1"
lehmer = "3.0.0"
actix-extensible-rate-limit = "0.4.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
serde_sqlite_jsonb = "0.2.1"
actix-cors = "0.7.1"
rustrict = "0.7.38"
validator = { version = "0.20.0", features = ["derive"] }
actix-web-validator = "7.0.0"
permutate = "0.3.2"
fst = "0.4.7"
toml = "1.0.1"
zip = "7.4.0"
io-enum = "1.2.0"
sync_file = "0.3.2"
serde_cow = "0.1.2"
dashmap = { version = "6.1.0", features = ["rayon"] }
walkdir = "2.5.0"
parking_lot = "0.12.5"

[dev-dependencies]
censor = "0.3.0"

[build-dependencies]
phf_codegen = "0.13.1"
phf_shared = { version = "0.13.1", features = ["unicase"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
hashlink = { version = "0.11.0", features = ["serde_impl"] }
unicase = "2.9.0"
permutate = "0.3.2"

[lints]
workspace = true
